// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAtomicProject createAtomicApp() without options.pageId calls \`npx @coveo/create-atomic\` properly 1`] = `
[
  "npx",
  [
    "@coveo/create-atomic@latest",
    "--project",
    "potato",
    "--org-id",
    "bobbyOrg",
    "--api-key",
    "someToken",
    "--platform-url",
    "https://platformdev-au.cloud.coveo.com",
    "--user",
    "bob@coveo.com",
  ],
]
`;

exports[`createAtomicProject createAtomicApp() without options.pageId calls \`npx @coveo/create-atomic\` properly 2`] = `
[
  "npx",
  [
    "@coveo/create-atomic@latest",
    "--project",
    "potato",
    "--org-id",
    "bobbyOrg",
    "--api-key",
    "someToken",
    "--platform-url",
    "https://platformdev-au.cloud.coveo.com",
    "--user",
    "bob@coveo.com",
    "--page-id",
    "pageId",
  ],
]
`;

exports[`createAtomicProject createAtomicLib() calls \`npx @coveo/create-atomic-component-project\` properly 1`] = `
[
  "npm",
  [
    "init",
    "@coveo/atomic-component-project",
  ],
  {
    "cwd": "kewlProject",
  },
]
`;
